.metadata/.plugins/org.eclipse.cdt.ui/K2000.build.log
14:20:41 **** Incremental Build of configuration Debug for project K2000 ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F429xx -I../Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src/main.o ../Src/main.c 
../Src/main.c: In function 'setcountdown':
../Src/main.c:187:3: warning: implicit declaration of function 'sleep' [-Wimplicit-function-declaration]
   sleep(4);
   ^~~~~
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F429xx -I../Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src/leds_control.o ../Src/leds_control.c 
../Src/leds_control.c: In function 'setLedColor':
../Src/leds_control.c:86:69: error: 'O_NDELAY' undeclared (first use in this function)
   const int fd = LC_OPEN("/tmp/puissance4/serial/ttyS1", O_WRONLY | O_NDELAY);
                                                                     ^~~~~~~~
../Src/leds_control.c:86:69: note: each undeclared identifier is reported only once for each function it appears in

14:20:41 Build Finished (took 791ms)

